--- a/foundations/block-and-inline/01-margin-and-padding-1/style.css
+++ b/foundations/block-and-inline/01-margin-and-padding-1/style.css
@@ -7,8 +7,9 @@ body {
   background: pink;
   border: 3px solid blue;
   /* CHANGE ME */
-  padding: 0px;
-  margin: 0px;
+  padding: 30px 0 30px 30px;
+  margin: 12px 0 12px 19px;
+  width: 88%;
 }
 
 .two {
@@ -23,6 +24,7 @@ body {
   border: 3px solid brown;
   width: 200px;
   /* CHANGE ME */
-  padding: 0px;
-  margin-left: 0px;
+  padding: 30px 0 30px 30px; 
+  margin-left: 365px;
+  margin-top: 45px;
 }
