--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,40 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 25px 10px 10px 10px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px 0 8px 12px;
+  margin: 0;
+  font-size: 1.5rem;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px 10px 20px 10px;
+  margin: .67em 0;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 12px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 10px;
+  width: 150px;
 }
