foundations exercises - intro to css and flex
completed some sections of the 'flex' exercises and all of 'intro to css' exercises.

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,15 @@
 /* Add CSS Styling */
+
+.avatar.proportioned,
+.proportioned {
+    width: 300px;
+}
+
+.distorted {
+    height: 300px;
+}
+
+.avatar.distorted {
+    width: 200px;
+    height: 400px;
+}
