--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -8,18 +8,29 @@ body {
   font-family: Besley, serif;
 }
 
+/* flex display */
+.flex {
+  display: flex;
+}
+
+
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  /* changes */
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8px;
 }
 
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
-  width: 48px;
-  height: 48px;
+  /* changes */
+  width: 36px;
+  height: 36px;
 }
 
 .logo {
@@ -27,6 +38,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  /* changes */
+  align-self: center;
 }
 
 button {
@@ -34,15 +47,23 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
+  /* changes */
+  padding: 0px 24px;
+  height: 36px;
+  margin-right: 16px;
+  align-self: center;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  /* spacing */
+  margin-left: 16px;
 }
 
 ul {
   list-style-type: none;
+  /* changes */
+  padding: 0;
 }
