--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+/* SOLUTION */
+
+.flex {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  gap: 52px;
+  width: 800px;
+  margin: 0 auto;}
+
+.flex .plant {
+  width: 200px;
 }
 
 /* do not edit this footer */
