--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,23 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* SOLUTION */
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.modal {
+  padding: 16px;
+}
+
+.icon {
+  width: 180px;
+}
+
+.text {
+  margin: 5px 0 10px 0;
+}
