--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,79 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* SOLUTION */
+
+/* general styles */
+
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+/* body flexed */
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* header */
+
+.header {
+  font-size: 3rem;
+  font-weight: bolder;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+}
+
+/* content with sidebar and cards */
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+  flex-shrink: 0;
+}
+
+.content .sidebar {
+  padding: 1em 1.5em 0;
+  min-height: 660px;
+}
+
+/* sidebar links */
+
+.content .sidebar a {
+  color: #fff;
+  line-height: 3;
+}
+
+/* content cards */
+
+.content .cards {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  padding: 2.5em 0;
+  gap: 25px;
+  justify-content: center;
+}
+
+.content .cards .card {
+  width: 350px;
+  min-width: 350px;
+  padding: 1em;
+}
+
+/* footer */
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
